--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,9 +3,10 @@ name: build and test
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "master" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "master" ]
+  workflow_dispatch:
 
 jobs:
   build:
